fix(urlbar): Fix going out of bounds on small screens

--- a/theme/extensions/tab-center-reborn.css
+++ b/theme/extensions/tab-center-reborn.css
@@ -86,12 +86,6 @@
     }
 }
 
-@media (max-width: 630px) {
-    #urlbar-container {
-        width: auto !important;
-    }
-}
-
 @keyframes fadeOut {
     0% {
         visibility: visible;
